# bevy_game_template

./: Cargo.toml
src/: lib.rs  loading.rs  main.rs  mainmenu.rs  player.rs  ui_events.rs
src/actions/: game_control.rs  mod.rs
